--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^1.10.1",
+    "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "react": "^18.2.0",
-    "react-chat-elements": "^12.0.10",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
