--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^1.10.1",
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
+    "@inworld/web-sdk": "^1.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
